src/objects/ArchiveBox__c.object
<CustomObject>
    <description>To store and track information regarding the archival of client folders.  Each box contains the folders from clients exited in a given month.  Boxes are shipped for storage several times a year. Each box must be complete (have all the folders for that month of exits) and all prior boxes must be complete for a box to be considered complete.  Complete is defined as all folders accounted for.  This is to cover lost folders which must be recorded as lost to be accounted for.</description>
    <fields>
        <fullName>Box_Alias__c</fullName>
        <description>create a useful name for the box based on the year and month of folders that are going into that box</description>
        <formula>text(Box_Start_Date__c)&amp;&quot; TO &quot;&amp;text(Box_End_Date__c) &amp; if(isblank(text(Folder_Borough__c)),&quot;&quot;, &quot; - &quot;&amp;text( Folder_Borough__c ))</formula>
        <label>Box Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Bar_Code__c</fullName>
        <description>The actual box number is 11 digits with leading zeros</description>
        <formula>lpad(text(Box_Number__c),11,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From label attached to the box. Labels come from Facilities</inlineHelpText>
        <label>Box Bar Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Comments__c</fullName>
        <label>Box Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Box_Complete__c</fullName>
        <inlineHelpText>Are all the folders that go in this box accounted for?</inlineHelpText>
        <label>Box Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Box_Destroy_Date__c</fullName>
        <description>Boxes are destroyed 7 years after they are shipped to storage.</description>
        <formula>Box_End_Date__c+(365*7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Destroy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Box_End_Date__c</fullName>
        <description>see description in Box Start Date</description>
        <inlineHelpText>Last exit date of folders in box, or last day of month if entire month</inlineHelpText>
        <label>Box End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Box_Number__c</fullName>
        <description>Data entry only</description>
        <inlineHelpText>Enter the number on the label, ignoring the leading zeros. 000000123 would be entered as 123</inlineHelpText>
        <label>Box Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Box_Start_Date__c</fullName>
        <description>Boxes contain a set of folders. Usually the folders all belong to clients who exited in a single month, but sometimes there may be more than one month in a box.</description>
        <inlineHelpText>Earliest exit date of folders in the box. If entire month is in box, use first day of month.</inlineHelpText>
        <label>Box Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Box_Shipped__c</fullName>
        <label>Date Box Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folder_Borough__c</fullName>
        <description>Borough that client folders come from</description>
        <inlineHelpText>Borough that client folders come from. Blank is from 346 Broadway.</inlineHelpText>
        <label>Folder Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Folder_Month__c</fullName>
        <label>Folder Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folder_Year__c</fullName>
        <label>Folder Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <description>Name of month for text that goes into report for Facilities to include in box.</description>
        <formula>CASE( 
Folder_Month__c, 
1, &quot;January&quot;,
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;,
12, &quot;December&quot;, 
&quot;NO MONTH ENTERED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Folders_in_Box__c</fullName>
        <description>Count the number of BC records that belong to a box</description>
        <label>Number of Folders in Box</label>
        <summaryForeignKey>Box_Contact__c.Archive_Box_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipping_Text__c</fullName>
        <description>Text to be included in report for Facilities that goes with box being shipped. We don&apos;t have to make a field for this, we could put a formula field in the report. But what the hell, there aren&apos;t many fields on this object.</description>
        <formula>&quot;CEP Exit Folders From &quot;&amp;Box_Alias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Text</label>
        <type>Text</type>
    </fields>
    <label>Archive Box</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Box_Alias__c</columns>
        <columns>Box_Number__c</columns>
        <columns>Box_Complete__c</columns>
        <columns>Date_Box_Shipped__c</columns>
        <columns>Number_of_Folders_in_Box__c</columns>
        <columns>Box_Comments__c</columns>
        <columns>Folder_Borough__c</columns>
        <columns>Box_End_Date__c</columns>
        <columns>Box_Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ready_to_Ship</fullName>
        <columns>NAME</columns>
        <columns>Box_Alias__c</columns>
        <columns>Box_Number__c</columns>
        <columns>Box_Complete__c</columns>
        <columns>Number_of_Folders_in_Box__c</columns>
        <columns>Shipping_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Box_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Date_Box_Shipped__c</field>
            <operation>equals</operation>
        </filters>
        <label>Ready to Ship</label>
    </listViews>
    <listViews>
        <fullName>SearchBoxName</fullName>
        <columns>NAME</columns>
        <columns>Box_Alias__c</columns>
        <columns>Box_Number__c</columns>
        <columns>Box_Complete__c</columns>
        <columns>Number_of_Folders_in_Box__c</columns>
        <columns>Shipping_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>29</value>
        </filters>
        <label>Search box name</label>
    </listViews>
    <nameField>
        <displayFormat>Box-{0}</displayFormat>
        <label>Box Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Boxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MinBoxNumber</fullName>
        <active>true</active>
        <description>The box number must be at least 10,000</description>
        <errorConditionFormula>Box_Number__c&lt;10000</errorConditionFormula>
        <errorDisplayField>Box_Number__c</errorDisplayField>
        <errorMessage>Box number must be greater than 10,000</errorMessage>
    </validationRules>
</CustomObject>